DatedServiceJourney support (#766)
DatedServiceJourney support